--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to NixOS
 on:
   push:
     branches: [main]
-  workflow_dispatch:  # Allow manual trigger
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -15,11 +15,10 @@ jobs:
           chmod +x cloudflared
           sudo mv cloudflared /usr/local/bin/
 
-      - name: Setup SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | base64 -d > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Configure SSH for Cloudflare Tunnel
         run: |
@@ -27,11 +26,9 @@ jobs:
           Host ssh.0pon.com
             ProxyCommand /usr/local/bin/cloudflared access ssh --hostname %h
             User mlayug
-            IdentityFile ~/.ssh/id_ed25519
             StrictHostKeyChecking accept-new
             UserKnownHostsFile /dev/null
           EOF
 
       - name: Deploy
-        run: ssh -o StrictHostKeyChecking=accept-new -o UserKnownHostsFile=/dev/null ssh.0pon.com "cd ~/witchat && ./deploy.sh"
-
+        run: ssh ssh.0pon.com "cd ~/witchat && ./deploy.sh"
