--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "concurrently \"next start\" \"node socket-server.js\"",
     "start:next": "next start",
     "start:socket": "node socket-server.js",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:users": "node tests/simulate-users.js"
   },
   "dependencies": {
     "express": "^4.18.0",
@@ -25,6 +26,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -34,6 +36,8 @@
     "eslint-config-next": "^16.1.6",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.0.0"
   }
 }
